--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -3,24 +3,24 @@
 
 <head>
     {% block head %}
-    <title>{% block title %}{% endblock %} - Virtual Learning for Student</title>
+    <title>{% block title %}{% endblock %} - Admin Panel | Virtual Learning for Student</title>
 
-    <link rel="stylesheet" href="{{ url_for('static',filename='css/bootstrap.min.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static',filename='css/mdb.min.css') }}" />
     <link rel="stylesheet" href="{{ url_for('static',filename='css/style.css') }}" />
     <link rel="stylesheet" href="//cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css">
-    <script src="https://code.jquery.com/jquery-3.6.0.js"
-        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="//cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
 
     {% endblock %}
 </head>
 
 <body>
+
     <div id="wrapper">
         {% block content %}{% endblock %}
     </div>
 
-    <script src="{{ url_for('static',filename='js/bootstrap.bundle.min.js') }}"></script>
+    <script src="{{ url_for('static',filename='js/mdb.min.js') }}"></script>
     <script src="{{ url_for('static',filename='js/main.js') }}"></script>
 </body>
 
