--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -1,47 +1,59 @@
-{% extends "admin/base.html" %}
-{% block title %}Admin Login{% endblock %}
-{% block head %}
-{{ super() }}
-<style type="text/css">
-    body {
-        background-image: url('http://127.0.0.1:5000/static/images/bg.jpeg');
-        background-size: cover;
-        background-repeat: no-repeat;
-    }
-</style>
-{% endblock %}
-{% block content %}
-<!-- Header -->
-<nav class="navbar bg-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="{{ url_for('admin.dashboard') }}">
-            <img src="{{ url_for('static',filename='images/logo.png') }}" alt="Virtual Learning for Students"
-                height="30" class="d-inline-block align-text-top ms-3">
-        </a>
-    </div>
-</nav>
-<div class="container">
-    <div class="row">
-        <div class="col"></div>
-        <div class="col-4 bg-dark text-light p-4 m-3 rounded-2">
-            <form method="POST" action="{{url_for('admin.login')}}">
-                {{ form.csrf_token }}
-                <div class="mb-3">
-                    {{ form.email.label(for="email",class="form-label") }}
-                    {{ form.email(class="form-control") }}
-                </div>
-                <div class="mb-3">
-                    {{ form.password.label(for="password",class="form-label") }}
-                    {{ form.password(class="form-control") }}
-                </div>
-                <div class="mb-3 text-center">
-                    <button type="submit" class="btn btn-primary">Login</button>
-                </div>
-            </form>
-        </div>
-        <div class="col">
-        </div>
-    </div>
-</div>
+<!DOCTYPE html>
+<html lang="en">
 
-{% endblock %}
+<head>
+    <title>Login - Admin Panel | Virtual Learning for Student</title>
+
+    <link rel="stylesheet" href="{{ url_for('static',filename='css/mdb.min.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static',filename='css/style.css') }}" />
+
+    <style type="text/css">
+        /* body {
+            background-image: url('http://127.0.0.1:5000/static/images/loginbg.png');
+            background-size: cover;
+            background-repeat: no-repeat;
+        } */
+    </style>
+</head>
+
+<body>
+
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                {% with messages = get_flashed_messages() %}
+                {% if messages %}
+                <ul class=flashes>
+                    {% for message in messages %}
+                    <li>{{ message }}</li>
+                    {% endfor %}
+                </ul>
+                {% endif %}
+                {% endwith %}
+            </div>
+            <div class="col-6">
+                <div class="border border-1 rounded-5 mt-5 ps-5 pe-5">
+                    <p class="fs-4 fw-bold mt-4 mb-4">Admin Login</p>
+                    <form method="POST" action="{{ url_for('admin.login') }}">
+                        {{ form.csrf_token }}
+                        <div class="form-outline mb-4">
+                            {{ form.email(class="form-control form-control-lg",id="email") }}
+                            {{ form.email.label(for="email",class="form-label") }}
+                        </div>
+                        <div class="form-outline mb-4">
+                            {{ form.password(class="form-control form-control-lg",id="email") }}
+                            {{ form.password.label(for="email",class="form-label") }}
+                        </div>
+                        <button type="submit" class="btn btn-primary btn-lg btn-rounded btn-block mb-4">Sign in</button>
+                    </form>
+                </div>
+            </div>
+            <div class="col"></div>
+        </div>
+    </div>
+
+    <script src="{{ url_for('static',filename='js/mdb.min.js') }}"></script>
+    <script src="{{ url_for('static',filename='js/main.js') }}"></script>
+</body>
+
+</html>
