--- a/templates/student/register.html
+++ b/templates/student/register.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Login - Admin Panel | Virtual Learning for Student</title>
+    <title>Create Account | Register - Student | Virtual Learning for Student</title>
 
     <link rel="stylesheet" href="{{ url_for('static',filename='css/bootstrap.min.css') }}" />
     <link rel="stylesheet" href="{{ url_for('static',filename='css/style.css') }}" />
@@ -19,10 +19,10 @@
 <body>
     <nav class="navbar navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand ms-5" href="{{ url_for('admin.home') }}">
+            <a class="navbar-brand ms-5" href="{{ url_for('student.home') }}">
                 <img src="{{ url_for('static',filename='images/logo.png') }}" alt="Virtual Learning Platform"
                     height="30" class="d-inline-block align-text-top">
-                Virtaul Learning Platform
+                Virtual Learning Platform
             </a>
         </div>
     </nav>
@@ -32,7 +32,7 @@
                 {% with messages = get_flashed_messages() %}
                 {% if messages %}
                 {% for message in messages %}
-                <div class="alert alert-danger bg-danger text-light alert-dismissible fade show" role="alert">
+                <div class="alert alert-warning bg-warning text-light alert-dismissible fade show" role="alert">
                     <strong>{{ message }}</strong>
                     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                 </div>
@@ -42,9 +42,17 @@
             </div>
             <div class="col-6">
                 <div class="border border-1 rounded-5 mt-5 ps-5 pe-5">
-                    <p class="fs-4 fw-bold mt-4 mb-4">Admin Login</p>
-                    <form method="POST" action="{{ url_for('admin.login') }}">
+                    <p class="fs-4 fw-bold mt-4 mb-4">Create Your Account</p>
+                    <form method="POST" action="{{ url_for('student.register') }}">
                         {{ form.csrf_token }}
+                        <div class="form-outline mb-4">
+                            {{ form.name.label(for="name",class="form-label") }}
+                            {{ form.name(class="form-control form-control-md",id="name") }}
+                        </div>
+                        <div class="form-outline mb-4">
+                            {{ form.phoneno.label(for="phoneno",class="form-label") }}
+                            {{ form.phoneno(class="form-control form-control-md",id="phoneno") }}
+                        </div>
                         <div class="form-outline mb-4">
                             {{ form.email.label(for="email",class="form-label") }}
                             {{ form.email(class="form-control form-control-md",id="email") }}
@@ -53,7 +61,7 @@
                             {{ form.password.label(for="password",class="form-label") }}
                             {{ form.password(class="form-control form-control-md",id="password") }}
                         </div>
-                        <button type="submit" class="btn btn-primary btn-md btn-rounded btn-block mb-4">Sign in</button>
+                        <button type="submit" class="btn btn-primary btn-md btn-rounded btn-block mb-4">Sign Up</button>
                     </form>
                 </div>
             </div>
