--- a/templates/admin/home.html
+++ b/templates/admin/home.html
@@ -7,29 +7,33 @@
 {% endblock %}
 {% block content %}
 <div class="container">
-    <div class="card text-bg-primary mb-3" style="max-width: 18rem;">
-        <div class="card-header">Header</div>
-        <div class="card-body">
-            <h5 class="card-title">Primary card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
+    <div class="row">
+        <div class="col">
+            <div class="card" style="width: 18rem;">
+                <img src="{{ url_for('static',filename='images/student.jpg') }}" class="card-img-top"
+                    alt="Students Corner">
+                <div class="card-body">
+                    <h5 class="card-title">Students Corner</h5>
+                    <p class="card-text"></p>
+                    <a href="{{ url_for('admin.viewstudents') }}" class="btn btn-primary">View</a>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card" style="width: 18rem;">
+                <img src="{{ url_for('static',filename='images/lecturer.jpg') }}" class="card-img-top"
+                    alt="Students Corner">
+                <div class="card-body">
+                    <h5 class="card-title">Lecturer Corner</h5>
+                    <p class="card-text"></p>
+                    <a href="{{ url_for('admin.viewlecturers') }}" class="btn btn-primary">View</a>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+
         </div>
     </div>
-    <div class="card text-bg-secondary mb-3" style="max-width: 18rem;">
-        <div class="card-header">Header</div>
-        <div class="card-body">
-            <h5 class="card-title">Secondary card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
-        </div>
-    </div>
-    <div class="card text-bg-success mb-3" style="max-width: 18rem;">
-        <div class="card-header">Header</div>
-        <div class="card-body">
-            <h5 class="card-title">Success card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
-        </div>
-    </div>
+
 </div>
 {% endblock %}
