--- a/templates/admin/view-lecturers.html
+++ b/templates/admin/view-lecturers.html
@@ -8,6 +8,17 @@
 {% block content %}
 <div class="container border border-1 rounded-2">
     <p class="fw-bold fs-4 mb-2 mt-2">View Lecturers</p>
+    <div>{% with messages = get_flashed_messages() %}
+        {% if messages %}
+        {% for message in messages %}
+        <div class="alert alert-warning bg-warning text-light alert-dismissible fade show" role="alert">
+            <strong>{{ message }}</strong>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+        {% endfor %}
+        {% endif %}
+        {% endwith %}
+    </div>
     <table class="table table-striped table-hover" id="myTable" style="width:100%">
         <thead>
             <tr>
@@ -17,7 +28,7 @@
                 <th>Semesters</th>
                 <th>Subject Codes</th>
                 <th>Info</th>
-                <!-- <th>Password</th> -->
+                <th>Action</th>
             </tr>
         </thead>
         <tbody>
@@ -42,6 +53,10 @@
                     </ul>
                 </td>
                 <td>{{lect.info}}</td>
+                <td>
+                    <a href="{{ url_for('admin.deletelecturer',email=lect.email) }}"
+                        class="btn btn-sm btn-danger">Delete</a>
+                </td>
             </tr>
             {% endfor %}
         </tbody>
