--- a/templates/admin/view-students.html
+++ b/templates/admin/view-students.html
@@ -8,6 +8,17 @@
 {% block content %}
 <div class="container border border-1 rounded-2">
     <p class="fw-bold fs-4 mb-2 mt-2">View Students</p>
+    <div>{% with messages = get_flashed_messages() %}
+        {% if messages %}
+        {% for message in messages %}
+        <div class="alert alert-warning bg-warning text-light alert-dismissible fade show" role="alert">
+            <strong>{{ message }}</strong>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+        {% endfor %}
+        {% endif %}
+        {% endwith %}
+    </div>
     <table class="table table-striped table-hover" id="myTable" style="width:100%">
         <thead>
             <tr>
@@ -15,6 +26,7 @@
                 <th>Name</th>
                 <th>Phone Number</th>
                 <th>Email</th>
+                <th>Action</th>
             </tr>
         </thead>
         <tbody>
@@ -24,6 +36,10 @@
                 <td>{{stud.name}}</td>
                 <td>{{stud.phoneno}}</td>
                 <td>{{stud.email}}</td>
+                <td>
+                    <a href="{{ url_for('admin.deletestudent',email=stud.email) }}"
+                        class="btn btn-sm btn-danger">Delete</a>
+                </td>
             </tr>
             {% endfor %}
         </tbody>
