--- a/templates/lecturer/base.html
+++ b/templates/lecturer/base.html
@@ -3,7 +3,7 @@
 
 <head>
     {% block head %}
-    <title>{% block title %}{% endblock %} - Admin Panel | Virtual Learning for Student</title>
+    <title>{% block title %}{% endblock %} - Lecturer's Corner | Virtual Learning for Student</title>
 
     <link rel="stylesheet" href="{{ url_for('static',filename='css/bootstrap.min.css') }}" />
     <link rel="stylesheet" href="{{ url_for('static',filename='css/style.css') }}" />
@@ -19,7 +19,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand ms-5" href="{{ url_for('admin.home') }}">
+            <a class="navbar-brand ms-5" href="{{ url_for('lecturer.home') }}">
                 <img src="{{ url_for('static',filename='images/logo.png') }}" alt="Virtual Learning Platform"
                     height="30" class="d-inline-block align-text-top me-3">
                 Virtual Learning Platform
@@ -32,10 +32,20 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto me-5 mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{{ url_for('admin.home') }}">Home</a>
+                        <a class="nav-link active" aria-current="page" href="{{ url_for('lecturer.home') }}">Home</a>
                     </li>
-
-                    <li class="nav-item dropdown">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="{{ url_for('lecturer.home') }}">My
+                            Content</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page"
+                            href="{{ url_for('lecturer.uploadcontent') }}">Upload Content</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="{{ url_for('lecturer.login') }}">Logout</a>
+                    </li>
+                    <!-- <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             Lecturers
@@ -85,8 +95,8 @@
                             </li>
                         </ul>
                     </li>
-                </ul>
-                <!-- <form class="d-flex" role="search">
+                </ul> -->
+                    <!-- <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form> -->
