--- a/templates/student/register.html
+++ b/templates/student/register.html
@@ -61,6 +61,10 @@
                             {{ form.password.label(for="password",class="form-label") }}
                             {{ form.password(class="form-control form-control-md",id="password") }}
                         </div>
+                        <div class="form-outline mb-4">
+                            <p>Already have an account? Please <a href="{{ url_for('student.login') }}">Login</a>
+                            </p>
+                        </div>
                         <button type="submit" class="btn btn-primary btn-md btn-rounded btn-block mb-4">Sign Up</button>
                     </form>
                 </div>
