--- a/templates/lecturer/base.html
+++ b/templates/lecturer/base.html
@@ -43,7 +43,8 @@
                             href="{{ url_for('lecturer.uploadcontent') }}">Upload Content</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{{ url_for('lecturer.login') }}">Logout</a>
+                        <a class="nav-link active" aria-current="page"
+                            href="{{ url_for('lecturer.logout') }}">Logout</a>
                     </li>
                     <!-- <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
