--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -34,7 +34,6 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="{{ url_for('admin.home') }}">Home</a>
                     </li>
-
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
@@ -85,7 +84,14 @@
                             </li>
                         </ul>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="{{ url_for('admin.viewcontents') }}">Contents</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="{{ url_for('admin.logout') }}">Logout</a>
+                    </li>
                 </ul>
+
                 <!-- <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
