--- a/templates/student/login.html
+++ b/templates/student/login.html
@@ -22,7 +22,7 @@
             <a class="navbar-brand ms-5" href="{{ url_for('student.home') }}">
                 <img src="{{ url_for('static',filename='images/logo.png') }}" alt="Virtual Learning Platform"
                     height="30" class="d-inline-block align-text-top">
-                Virtaul Learning Platform
+                Virtual Learning Platform
             </a>
         </div>
     </nav>
@@ -32,7 +32,7 @@
                 {% with messages = get_flashed_messages() %}
                 {% if messages %}
                 {% for message in messages %}
-                <div class="alert alert-danger bg-danger text-light alert-dismissible fade show" role="alert">
+                <div class="alert alert-warning bg-warning text-light alert-dismissible fade show" role="alert">
                     <strong>{{ message }}</strong>
                     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                 </div>
