--- a/templates/student/subjects.html
+++ b/templates/student/subjects.html
@@ -1,5 +1,5 @@
-{% extends "admin/base.html" %}
-{% block title %}View Semesters{% endblock %}
+{% extends "student/base.html" %}
+{% block title %}Subjects{% endblock %}
 {% block head %}
 {{ super() }}
 <style type="text/css">
@@ -7,7 +7,7 @@
 {% endblock %}
 {% block content %}
 <div class="container border border-1 rounded-2">
-    <p class="fw-bold fs-4 mb-2 mt-2">View Semesters</p>
+    <p class="fw-bold fs-4 mb-2 mt-2">Subjects for {{subjects.name}}</p>
     <div>{% with messages = get_flashed_messages() %}
         {% if messages %}
         {% for message in messages %}
@@ -22,36 +22,33 @@
     <table class="table table-striped table-hover" id="myTable" style="width:100%">
         <thead>
             <tr>
-                <th>ID</th>
-                <th>Name</th>
+                <!-- <th>ID</th> -->
                 <th>Code</th>
-                <th>Subjects</th>
-                <th>Action</th>
+                <th>Name</th>
+                <th>Information</th>
+                <th>View</th>
             </tr>
         </thead>
         <tbody>
-            {% for sem in semesters: %}
+
+            {% for sub in all_subjects: %}
+            {% for sub_code in subjects.subjects: %}
+            {% if sub.code in sub_code: %}
             <tr>
-                <td>{{sem._id}}</td>
-                <td>{{sem.name}}</td>
-                <td>{{sem.code}}</td>
+                <!-- <td>{{sub._id}}</td> -->
+                <td>{{sub.code}}</td>
+                <td>{{sub.name}}</td>
+                <td>{{sub.info}}</td>
                 <td>
-                    <ul>
-                        {% for sub in sem.subjects %}
-                        <li>{{sub}}</li>
-                        {% endfor %}
-                    </ul>
-                </td>
-                <td>
-                    <a href="{{ url_for('admin.deletesem',code=sem.code) }}" class="btn btn-sm btn-danger">Delete</a>
+                    <a href="{{ url_for('student.contents',subcode=sub.code) }}" class="btn btn-sm btn-success">View
+                        Content</a>
                 </td>
             </tr>
-            {% endfor %}
+            {% endif %} {% endfor %} {% endfor %}
         </tbody>
     </table>
 </div>
 <script>
-    
     $(document).ready(function () {
         $('#myTable').DataTable();
     });
