--- a/templates/admin/add-sem.html
+++ b/templates/admin/add-sem.html
@@ -31,7 +31,7 @@
                 <div class="col">
                     <div class="mb-3">
                         <label for="code" class="form-label">Code</label>
-                        <input name="code" type="number" class="form-control" id="code" required>
+                        <input name="code" type="text" class="form-control" id="code" required>
                     </div>
                 </div>
                 <div class="col">
