--- a/templates/admin/home.html
+++ b/templates/admin/home.html
@@ -10,7 +10,7 @@
     <div class="row">
         <div class="col">
             <div class="card" style="width: 18rem;">
-                <img src="{{ url_for('static',filename='images/student.jpg') }}" class="card-img-top"
+                <img src="{{ url_for('static',filename='images/student.png') }}" class="card-img-top"
                     alt="Students Corner">
                 <div class="card-body">
                     <h5 class="card-title">Students Corner</h5>
@@ -21,7 +21,7 @@
         </div>
         <div class="col">
             <div class="card" style="width: 18rem;">
-                <img src="{{ url_for('static',filename='images/lecturer.jpg') }}" class="card-img-top"
+                <img src="{{ url_for('static',filename='images/teacher.png') }}" class="card-img-top"
                     alt="Students Corner">
                 <div class="card-body">
                     <h5 class="card-title">Lecturer Corner</h5>
@@ -32,7 +32,7 @@
         </div>
         <div class="col">
             <div class="card" style="width: 18rem;">
-                <img src="{{ url_for('static',filename='images/content.png') }}" class="card-img-top"
+                <img src="{{ url_for('static',filename='images/docs.png') }}" class="card-img-top"
                     alt="Students Corner">
                 <div class="card-body">
                     <h5 class="card-title">Contents</h5>
