--- a/templates/admin/contents.html
+++ b/templates/admin/contents.html
@@ -49,7 +49,7 @@
                         download>Download</a>
                 </td>
                 <td>
-                    <a href="{{ url_for('lecturer.deletecontent',id=c.uid) }}" class="btn btn-sm btn-danger">Delete</a>
+                    <a href="{{ url_for('admin.deletecontent',id=c.uid) }}" class="btn btn-sm btn-danger">Delete</a>
                 </td>
             </tr>
             {% endfor %}
