--- a/templates/home.html
+++ b/templates/home.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="{{ url_for('static',filename='css/style.css') }}" />
 
     <style type="text/css">
-        /* body {
-            background-image: url('http://127.0.0.1:5000/static/images/loginbg.png');
+        body {
+            background-image: url('/static/images/bg.jpg');
             background-size: cover;
             background-repeat: no-repeat;
-        } */
+        }
     </style>
 </head>
 
@@ -27,7 +27,7 @@
         </div>
     </nav>
     <div class="container mt-5">
-        <div class="row">
+        <!-- <div class="row">
             <div class="col">
                 <div class="card text-bg-primary mb-3" style="max-width: 18rem;">
                     <div class="card-header">Student Corner</div>
@@ -55,6 +55,41 @@
                         <div class="card-body">
                             <a href="{{ url_for('admin.login') }}" class="btn btn-sm btn-light">Login</a>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div> -->
+        <div class="row">
+            <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img src="{{ url_for('static',filename='images/student.png') }}" class="card-img-top"
+                        alt="Students Corner">
+                    <div class="card-body">
+                        <h5 class="card-title">Students Corner</h5>
+                        <p class="card-text"></p>
+                        <a href="{{ url_for('student.login') }}" class="btn btn-primary">Login</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img src="{{ url_for('static',filename='images/teacher.png') }}" class="card-img-top"
+                        alt="Students Corner">
+                    <div class="card-body">
+                        <h5 class="card-title">Lecturer Corner</h5>
+                        <p class="card-text"></p>
+                        <a href="{{ url_for('lecturer.login') }}" class="btn btn-primary">Login</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img src="{{ url_for('static',filename='images/admin.png') }}" class="card-img-top"
+                        alt="Students Corner">
+                    <div class="card-body">
+                        <h5 class="card-title">Admin Panel</h5>
+                        <p class="card-text"></p>
+                        <a href="{{ url_for('admin.login') }}" class="btn btn-primary">Login</a>
                     </div>
                 </div>
             </div>
