--- a/templates/lecturer/login.html
+++ b/templates/lecturer/login.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="{{ url_for('static',filename='css/style.css') }}" />
 
     <style type="text/css">
-        /* body {
-            background-image: url('http://127.0.0.1:5000/static/images/loginbg.png');
+        body {
+            background-image: url('/static/images/bg.jpg');
             background-size: cover;
             background-repeat: no-repeat;
-        } */
+        }
     </style>
 </head>
 
@@ -22,7 +22,7 @@
             <a class="navbar-brand ms-5" href="{{ url_for('lecturer.home') }}">
                 <img src="{{ url_for('static',filename='images/logo.png') }}" alt="Virtual Learning Platform"
                     height="30" class="d-inline-block align-text-top">
-                Virtaul Learning Platform
+                Virtual Learning Platform
             </a>
         </div>
     </nav>
@@ -41,7 +41,7 @@
                 {% endwith %}
             </div>
             <div class="col-6">
-                <div class="border border-1 rounded-5 mt-5 ps-5 pe-5">
+                <div class="border border-1 rounded-5 mt-5 ps-5 pe-5 bg-white">
                     <p class="fs-4 fw-bold mt-4 mb-4">Lecturer Login</p>
                     <form method="POST" action="{{ url_for('lecturer.login') }}">
                         {{ form.csrf_token }}
