--- a/templates/lecturer/upload-content.html
+++ b/templates/lecturer/upload-content.html
@@ -26,7 +26,7 @@
                     <div class="mb-3">
                         <label for="formFile" class="form-label">Content File</label>
                         <input name="file" class="form-control" type="file" id="formFile" required>
-                        <input name="lecturer" type="hidden" value="{{lecturer.email}}">
+                        <input name="lecturer" type="hidden">
                     </div>
                 </div>
                 <div class="col">
